fix text layout overflow in project item

--- a/project/project.style.css
+++ b/project/project.style.css
@@ -33,7 +33,6 @@
     box-sizing: border-box;
     padding: 1rem;
     width: 100%;
-    height: 100%;
 }
 
 .project-list__title {
